--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <div class="modal is-hidden" data-modal>
       <div class="inner-modal">
         <button type="button" class="close-modal" data-modal-close><svg class="close-icon">
-          <use href="/images/social-icons.svg#icon-close"></use></svg></button>
+          <use href="./images/social-icons.svg#icon-close"></use></svg></button>
           <h3 class="form-title">
             Leave your information and we'll call you back
           </h3>
           <form class="contact-form" autocomplete="off">
             <label>Name
               <input  type="text" name="name">
-              <svg class="form-icon"><use href="images/symbol-defs.svg#icon-person"></use></svg>
+              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-person"></use></svg>
             </label>
             <label>Telephone
               <input type="tel" name="phone">
-              <svg class="form-icon"><use href="images/symbol-defs.svg#icon-phone"></use></svg>
+              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-phone"></use></svg>
             </label>
             <label>E-mail
               <input type="email" name="e-mail">
-              <svg class="form-icon"><use href="images/symbol-defs.svg#icon-email"></use>
+              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-email"></use>
               </svg>
             </label>
             <label> Comments
@@ -43,7 +43,7 @@
           </form>
           <label class="form-agreement"> <input  class="checkbox"type="checkbox" name="agreement" checked>
             <span class="form-span"></span>I agree with the letter and accept the <a  href="#" class="form-link">Terms and Conditions</a>
-            <svg><use href="images/symbol-defs.svg#icon-vector"></use></svg>
+            <svg><use href="./images/symbol-defs.svg#icon-vector"></use></svg>
           </label>
         </div>
       
@@ -65,7 +65,7 @@
             <li class="contact-list-item">
               <div class="header-icon">
                 <svg class="smartphone-icon">
-                  <use href="/images/social-icons.svg#icon-envelope"></use>
+                  <use href="./images/social-icons.svg#icon-envelope"></use>
                 </svg>
               </div>
             </li>
@@ -75,7 +75,7 @@
             <li class="contact-list-item">
               <div class="header-icon">
                 <svg class="smartphone-icon">
-                  <use href="/images/social-icons.svg#icon-smartphone"></use>
+                  <use href="./images/social-icons.svg#icon-smartphone"></use>
                 </svg>
               </div>
             </li>
@@ -106,7 +106,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="antenna-icon">
-                    <use href="/images/social-icons.svg#icon-antenna"></use>
+                    <use href="./images/social-icons.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -120,7 +120,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="clock-icon">
-                    <use href="/images/social-icons.svg#icon-clock"></use>
+                    <use href="./images/social-icons.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -134,7 +134,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="diagram-icon">
-                    <use href="/images/social-icons.svg#icon-diagram"></use>
+                    <use href="./images/social-icons.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -148,7 +148,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="astronaut-icon">
-                    <use href="/images/social-icons.svg#icon-astronaut"></use>
+                    <use href="./images/social-icons.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -197,28 +197,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/social-icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/social-icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/social-icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/social-icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,28 +239,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/social-icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/social-icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/social-icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/social-icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -281,28 +281,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/social-icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/social-icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/social-icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/social-icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -323,28 +323,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/social-icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/social-icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/social-icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="/images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/social-icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -361,32 +361,32 @@
           <ul class="customer-list unstyled-list horizontal-list">
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo1"></use>
+                <use href="./images/social-icons.svg#icon-logo1"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo2"></use>
+                <use href="./images/social-icons.svg#icon-logo2"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo3"></use>
+                <use href="./images/social-icons.svg#icon-logo3"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo4"></use>
+                <use href="./images/social-icons.svg#icon-logo4"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo5"></use>
+                <use href="./images/social-icons.svg#icon-logo5"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="/images/social-icons.svg#icon-logo6"></use>
+                <use href="./images/social-icons.svg#icon-logo6"></use>
               </svg>
             </li>
           </ul>
@@ -415,21 +415,21 @@
             <ul class="unstyled-list social-list">
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-instagram"></use></svg>
+                <svg class="social-icon"><use href="./images/social-icons.svg#icon-instagram"></use></svg>
               </a>
             </li>
             <li class="social-list-item ">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-twitter"></use></svg>
+                <svg class="social-icon"><use href="./images/social-icons.svg#icon-twitter"></use></svg>
               </a>
             </li>              <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-facebook"></use></svg>
+                <svg class="social-icon"><use href="./images/social-icons.svg#icon-facebook"></use></svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                  <svg class="social-icon"><use href="/images/social-icons.svg#icon-linkedin"></use></svg>
+                  <svg class="social-icon"><use href="./images/social-icons.svg#icon-linkedin"></use></svg>
               </a>
             </li>
           </ul>
@@ -441,7 +441,7 @@
             </h4>
             <input class="email-section" type="email" name="e-mail" placeholder="E-mail">
             <button  class="form-button" type="submit"> Subscribe
-            <svg class="email-icon"><use href="images/symbol-defs.svg#icon-send">
+            <svg class="email-icon"><use href="./images/symbol-defs.svg#icon-send">
             </use></svg></button>
           </div> 
         </div>
