--- a/index.html
+++ b/index.html
@@ -19,32 +19,41 @@
     <div class="modal is-hidden" data-modal>
       <div class="inner-modal">
         <button type="button" class="close-modal" data-modal-close><svg class="close-icon">
-          <use href="./images/social-icons.svg#icon-close"></use></svg></button>
+          <use href="./images/symbol-defs.svg#icon-close"></use></svg></button>
           <h3 class="form-title">
             Leave your information and we'll call you back
           </h3>
           <form class="contact-form" autocomplete="off">
-            <label>Name
-              <input  type="text" name="name">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-person"></use></svg>
-            </label>
-            <label>Telephone
-              <input type="tel" name="phone">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-phone"></use></svg>
-            </label>  
-            <label>E-mail
-              <input type="email" name="e-mail">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-email"></use>
-              </svg>
-            </label>
-            <label> Comments
-              <textarea name="comments" placeholder="Enter the text"></textarea>
-            </label>
+            <div class="label-box">
+              <label>Name
+                <input class="contact-form-input" type="text" name="name">
+                <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-person"></use></svg>
+              </label>
+            </div>
+            <div class="label-box">
+              <label>Telephone
+                <input class="contact-form-input" type="tel" name="phone">
+                <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-phone"></use></svg>
+              </label>
+            </div>  
+            <div class="label-box">
+              <label>E-mail
+                <input class="contact-form-input" type="email" name="e-mail">
+                <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>
+              </label>
+            </div>
+            <div class="label-box">
+              <label> Comments
+                <textarea name="comments" placeholder="Enter the text"></textarea>
+              </label>
+            </div>
           </form>
-          <label class="form-agreement"> <input  class="checkbox"type="checkbox" name="agreement" checked>
-            <span class="form-span"></span>I agree with the letter and accept the <a  href="#" class="form-link">Terms and Conditions</a>
-            <svg><use href="./images/symbol-defs.svg#icon-vector"></use></svg>
-          </label>
+          <div>
+            <label class="form-agreement"> <input  class="checkbox"type="checkbox" name="agreement" checked>
+              <span class="checkbox-replace"><svg class="checkbox-vector"><use href="./images/symbol-defs.svg#icon-vector"></use></svg></span>I agree with the letter and accept the <a  href="#" class="form-link">Terms and Conditions</a>
+            </label>
+          </div>
           <div class="box-button">
           <button class="form-button" type="submit">Send</button>
         </div>
@@ -68,7 +77,7 @@
             <div class="header-email">
               <li class="contact-list-item">  
                 <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/social-icons.svg#icon-envelope"></use>
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg> 
               </li>
               <li class="contact-list-item">
@@ -78,7 +87,7 @@
             <div class="header-phone">
               <li class="contact-list-item">
                 <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/social-icons.svg#icon-smartphone"></use>
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
               
               </li>
@@ -110,7 +119,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="about-icon" widh="65" height="70">
-                    <use href="./images/social-icons.svg#icon-antenna"></use>
+                    <use href="./images/symbol-defs.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -124,7 +133,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="about-icon" widh="67" height="70">
-                    <use href="./images/social-icons.svg#icon-clock"></use>
+                    <use href="./images/symbol-defs.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -138,7 +147,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="about-icon" widh="70" height="54">
-                    <use href="./images/social-icons.svg#icon-diagram"></use>
+                    <use href="./images/symbol-defs.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -152,7 +161,7 @@
               <div class="text-boxes">
                 <div class="background-icon">
                   <svg class="about-icon" widh="70" height="70">
-                    <use href="./images/social-icons.svg#icon-astronaut"></use>
+                    <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <li class="about-items">
@@ -201,28 +210,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -243,28 +252,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,28 +294,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -327,28 +336,28 @@
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="#" target="_blank" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/social-icons.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -365,32 +374,32 @@
           <ul class="customer-list unstyled-list">
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo1"></use>
+                <use href="./images/symbol-defs.svg#icon-logo1"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo2"></use>
+                <use href="./images/symbol-defs.svg#icon-logo2"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo3"></use>
+                <use href="./images/symbol-defs.svg#icon-logo3"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo4"></use>
+                <use href="./images/symbol-defs.svg#icon-logo4"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo5"></use>
+                <use href="./images/symbol-defs.svg#icon-logo5"></use>
               </svg>
             </li>
             <li class="customer-item">
               <svg class="customer-icon">
-                <use href="./images/social-icons.svg#icon-logo6"></use>
+                <use href="./images/symbol-defs.svg#icon-logo6"></use>
               </svg>
             </li>
           </ul>
@@ -419,21 +428,21 @@
             <ul class="unstyled-list social-list">
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="./images/social-icons.svg#icon-instagram"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-instagram"></use></svg>
               </a>
             </li>
             <li class="social-list-item ">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="./images/social-icons.svg#icon-twitter"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-twitter"></use></svg>
               </a>
             </li>              <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="./images/social-icons.svg#icon-facebook"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-facebook"></use></svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                  <svg class="social-icon"><use href="./images/social-icons.svg#icon-linkedin"></use></svg>
+                  <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-linkedin"></use></svg>
               </a>
             </li>
           </ul>
