--- a/portfolio.html
+++ b/portfolio.html
@@ -16,39 +16,6 @@
   </head>
 
   <body>
-    <div class="modal is-hidden" data-modal>
-      <div class="inner-modal">
-        <button type="button" class="close-modal" data-modal-close><svg class="close-icon">
-          <use href="./images/social-icons.svg#icon-close"></use></svg></button>
-          <h3 class="form-title">
-            Leave your information and we'll call you back
-          </h3>
-          <form class="contact-form" autocomplete="off">
-            <label>Name
-              <input  type="text" name="name">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-person"></use></svg>
-            </label>
-            <label>Telephone
-              <input type="tel" name="phone">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-phone"></use></svg>
-            </label>
-            <label>E-mail
-              <input type="email" name="e-mail">
-              <svg class="form-icon"><use href="./images/symbol-defs.svg#icon-email"></use>
-              </svg>
-            </label>
-            <label> Comments
-              <textarea name="comments" placeholder="Enter the text"></textarea>
-            </label>
-          </form>
-          <label class="form-agreement"> <input  class="checkbox"type="checkbox" name="agreement" checked>
-            <span class="form-span"></span>I agree with the letter and accept the <a  href="#" class="form-link">Terms and Conditions</a>
-            <svg><use href="./images/symbol-defs.svg#icon-vector"></use></svg>
-          </label>
-          <button class="form-button" type="submit">Send</button>
-        </div>
-      
-    </div>
     <header class="page-header">
       <nav class="main-nav"> 
         <div class="header-left">
@@ -65,8 +32,8 @@
           <ul class="contact-list unstyled-list horizontal-list contact-list">  
             <div class="header-email">
               <li class="contact-list-item">  
-                <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/social-icons.svg#icon-envelope"></use>
+                <svg class="smartphone-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg> 
               </li>
               <li class="contact-list-item">
@@ -76,7 +43,7 @@
             <div class="header-phone">
               <li class="contact-list-item">
                 <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/social-icons.svg#icon-smartphone"></use>
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
               
               </li>
@@ -218,21 +185,21 @@
             <ul class="unstyled-list social-list">
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-instagram"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-instagram"></use></svg>
               </a>
             </li>
             <li class="social-list-item ">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-twitter"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-twitter"></use></svg>
               </a>
             </li>              <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                <svg class="social-icon"><use href="/images/social-icons.svg#icon-facebook"></use></svg>
+                <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-facebook"></use></svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" target="_blank" class="footer-social-link">
-                  <svg class="social-icon"><use href="/images/social-icons.svg#icon-linkedin"></use></svg>
+                  <svg class="social-icon"><use href="./images/symbol-defs.svg#icon-linkedin"></use></svg>
               </a>
             </li>
           </ul>
@@ -243,8 +210,8 @@
               SUBSCRIBE TO THE NEWSLETTER
             </h4>
             <input class="email-section" type="email" name="e-mail" placeholder="E-mail">
-            <button  class="form-button" type="submit"> Subscribe
-            <svg class="email-icon"><use href="images/form-icons.svg#icon-send">
+            <button  class="form-button-footer" type="submit"> Subscribe
+            <svg class="email-icon"><use href="./images/symbol-defs.svg#icon-send">
             </use></svg></button>
           </div> 
         </div>
